--- a/mapoutUI/landingpage/src/index.html
+++ b/mapoutUI/landingpage/src/index.html
@@ -13,6 +13,6 @@
         a { cursor: pointer }
     </style></head>
 <body>
-  <app>loading ...</app>
+  <app-root>Loading...</app-root>
 </body>
 </html>
